@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1307 2018/02/05 16:38:56 adam Exp $
+# $NetBSD: Makefile,v 1.1308 2018/02/11 13:59:18 ast Exp $
 #
 
 COMMENT=	Packages related to the World Wide Web
@@ -197,6 +197,7 @@ SUBDIR+=	netsurf
 SUBDIR+=	nghttp2
 SUBDIR+=	nginx
 SUBDIR+=	nginx-devel
+SUBDIR+=	nostromo
 SUBDIR+=	ns-plugger-common
 SUBDIR+=	ns-remote
 SUBDIR+=	nspluginwrapper
